# latexmailmerge

./: .gitignore  Cargo.toml  PKGBUILD  README.md  snapcraft.yaml
src/: lib.rs  main.rs
