[package]
name = "latexmailmerge"
description = "A small command line tool which converts a CSV file into LaTeX commands for mail merges."
authors = ["Jan Martin Reckel"]
readme = "README.md"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
unicode-segmentation = "1.10.0"